# rust-password-manager

./: Cargo.toml  README.md  passwords.json  vault.enc
src/: main.rs  master.rs  structs.rs  ui.rs  vault.rs
