[package]
name = "password-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
argon2-kdf = "1.6.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.9.1"
base64 = "0.22.1"
eframe = "0.31.1"
clap = { version = "4.5.39", features = ["color", "derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
indicatif = "0.17.11"
